# ai-engineering-roadmap

./: .gitignore  Makefile  README.md  pyproject.toml
week-1-KnowledgeBase-AI-Assistant/: pyproject.toml
week-1-KnowledgeBase-AI-Assistant/src/ingest/: ingest.py
week-1-KnowledgeBase-AI-Assistant/src/week_1_knowledgebase_ai_assistant/: main.py  rag.py
