[project]
name = "week-1-knowledgebase-ai-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Inesh-Reddy",email = "ineshreddy007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry.scripts]
dev = "week_1_knowledgebase_ai_assistant.main:main"

[tool.poetry]
packages = [{include = "week_1_knowledgebase_ai_assistant", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
