[project]
name = "week-1-knowledgebase-ai-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Inesh-Reddy",email = "ineshreddy007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "openai (>=2.6.1,<3.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "pypdf (>=6.1.3,<7.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry.scripts]
dev = "week_1_knowledgebase_ai_assistant.main:main"

[tool.poetry]
packages = [{include = "week_1_knowledgebase_ai_assistant", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
